Add more details to the list --paths subcommand